--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/dashboard
+
+
+OPENAI_API_KEY=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
